--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-id-generator": "^3.0.2",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "start": "react-scripts start",
